Add initial HTML structure for the website
Estructure official Asociación Afrocolombiana Benkos Ku Suto website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Benkos Ku Suto - Asociación Afrocolombiana</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="images/logo.png" alt="Logo Benkos Ku Suto">
+            </div>
+            <ul class="nav-menu">
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="about.html">NOSOTROS</a></li>
+                <li><a href="programs.html">PROGRAMAS</a></li>
+                <li><a href="committees.html">COMITÉS</a></li>
+                <li><a href="news.html">NOTICIAS</a></li>
+                <li><a href="contact.html">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section class="hero">
+            <h1>¡El pueblo no se rinde carajo!</h1>
+            <p>Defendemos los derechos de las comunidades afrocolombianas en Cartagena y Bolívar</p>
+            <button onclick="location.href='about.html'">Conócenos</button>
+        </section>
+
+        <section class="mission-vision">
+            <div class="mission">
+                <h2>Misión</h2>
+                <p>Fortalecer la identidad y el autorreconocimiento étnico para combatir el racismo y la discriminación.</p>
+            </div>
+            <div class="vision">
+                <h2>Visión</h2>
+                <p>Ser el principal referente organizativo en formación y fortalecimiento de las identidades afrodescendientes para 2030.</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="social-links">
+            <a href="[enlace Facebook]">Facebook</a>
+            <a href="[enlace Instagram]">Instagram</a>
+        </div>
+        <p>&copy; 2024 Asociación Afrocolombiana Benkos Ku Suto</p>
+    </footer>
+</body>
+</html>
