--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <header>
         <nav>
             <div class="logo">
+                <img src="images/logo-benkos-ku-suto.png" alt="Logo Benkos Ku Suto" class="logo-img">
+                <span class="org-name">Benkos Ku Suto</span>
+            </div>
+            <div class="logo">
                 <img src="images/logo.png" alt="Logo Benkos Ku Suto">
             </div>
             <ul class="nav-menu">
