--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
                 <img src="Benkos-Ku-Suto/images/logo-benkos-ku-suto.png" alt="Logo Benkos Ku Suto" class="logo-img">
                 <span class="org-name">Benkos Ku Suto</span>
             </div>
-        
+            <div class="logo">
+                <img src="images/logo.png" alt="Logo Benkos Ku Suto">
+            </div>
             <ul class="nav-menu">
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="about.html">NOSOTROS</a></li>
