Revise hero section content in index.html
Updated hero section with new headings and description.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <nav>
         <div class="logo">
             <img src="images/logo-benkos-ku-suto.png" alt="Logo Benkos Ku Suto" class="logo-img">
-            <span class="org-name">Benkos Ku Suto</span>
         </div>
         
         <ul class="nav-menu">
@@ -27,8 +26,9 @@
 
     <main>
         <section class="hero">
-            <h1>¡El pueblo no se rinde carajo!</h1>
-            <p>Defendemos los derechos de las comunidades afrocolombianas en Cartagena y Bolívar</p>
+            <h1> Benkos Ku Suto</h1>
+            <h2>¡El pueblo no se rinde carajo!</h2>
+            <p>Defendemos los derechos humanos de las comunidades afrocolombianas en Cartagena y Bolívar</p>
             <button onclick="location.href='about.html'">Conócenos</button>
         </section>
 
