--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,11 @@
             <div class="logo">
                 <img src="images/logo-benkos-ku-suto.png" alt="Logo Benkos Ku Suto" class="logo-img">
             </div>
+            
+            <!-- Checkbox oculto para controlar el menú en móviles -->
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="menu-icon">&#9776;</label> <!-- Ícono hamburguesa -->
+            
             <ul class="nav-menu">
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="about.html">NOSOTROS</a></li>
