Implement mobile menu toggle in programs.html
Added mobile menu toggle functionality with checkbox and label.

--- a/programs.html
+++ b/programs.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programas - Benkos Ku Suto</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header>
+<header>
         <nav>
             <div class="logo">
                 <img src="images/logo-benkos-ku-suto.png" alt="Logo Benkos Ku Suto" class="logo-img">
             </div>
+            
+            <!-- Checkbox oculto para controlar el menú en móviles -->
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="menu-icon">&#9776;</label> <!-- Ícono hamburguesa -->
+            
             <ul class="nav-menu">
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="about.html">NOSOTROS</a></li>
