--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <!-- 👇 ARCHIVOS CSS ACTUALIZADOS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/colors.css.css">
     <link rel="stylesheet" href="css/animations.css">     <!-- ✅ NUEVO -->
     <link rel="stylesheet" href="css/responsive.css">     <!-- ✅ NUEVO -->
 </head>
