--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros - Benkos Ku Suto</title>
-    !-- 👇 ARCHIVOS CSS ACTUALIZADOS -->
+        !-- 👇 ARCHIVOS CSS ACTUALIZADOS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animations.css">     <!-- ✅ NUEVO -->
-    <link rel="styl
+    <link rel="stylesheet" href="css/responsive.css"> 
 </head>
 <body>
     <header>
