--- a/programs.html
+++ b/programs.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programas - Benkos Ku Suto</title>
+    <!-- 👇 ARCHIVOS CSS ACTUALIZADOS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animations.css">     <!-- ✅ NUEVO -->
+    <link rel="stylesheet" href="css/responsive.css">     
 <header>
         <nav>
             <div class="logo">
