--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <!-- 👇 ARCHIVOS CSS ACTUALIZADOS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animations.css">     <!-- ✅ NUEVO -->
-    <link rel="stylesheet" href="css/responsive.css">     <!-- ✅ NUEVO
+    <link rel="stylesheet" href="css/responsive.css">     
 </head>
 <body>
     <header>
