--- a/programs.html
+++ b/programs.html
@@ -22,7 +22,7 @@
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="about.html">NOSOTROS</a></li>
                 <li><a href="programs.html">PROGRAMAS</a></li>
-                <li><a href="news.html">NOTICIAS</a></li>
+                <li><a href="news.html">NOVEDADES</a></li>
                 <li><a href="contact.html">CONTACTO</a></li>
             </ul>
         </nav>
