--- a/about.html
+++ b/about.html
@@ -6,10 +6,9 @@
     <title>Nosotros - Benkos Ku Suto</title>
         <!-- 👇 ARCHIVOS CSS ACTUALIZADOS -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animations.css">     <!-- ✅ NUEVO -->
-    <link rel="stylesheet" href="css/responsive.css"> 
+    <link rel="stylesheet" href="css/animations.css">     <!-- ✅ NUEVO --> 
 </head>
-<body>
+<body class="about-page">
     <header>
         <nav>
             <div class="logo">
