--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,9 @@
     <title>Contacto - Benkos Ku Suto</title>
     <!-- 👇 ARCHIVOS CSS ACTUALIZADOS -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animations.css">     <!-- ✅ NUEVO -->
-    <link rel="stylesheet" href="css/responsive.css">     
+    <link rel="stylesheet" href="css/animations.css">     <!-- ✅ NUEVO -->   
 </head>
-<body>
+<body class="contact-page">
     <header>
         <nav>
             <div class="logo">
