--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Benkos Ku Suto</title>
-    <!-- 👇 ARCHIVOS CSS ACTUALIZADOS -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animations.css">     <!-- ✅ NUEVO -->   
+    <link rel="stylesheet" href="css/animations.css">
 </head>
 <body class="contact-page">
     <header>
@@ -15,9 +14,8 @@
                 <img src="images/logo-benkos-ku-suto.png" alt="Logo Benkos Ku Suto" class="logo-img">
             </div>
             
-            <!-- Checkbox oculto para controlar el menú en móviles -->
             <input type="checkbox" id="menu-toggle">
-            <label for="menu-toggle" class="menu-icon">&#9776;</label> <!-- Ícono hamburguesa -->
+            <label for="menu-toggle" class="menu-icon">&#9776;</label>
             
             <ul class="nav-menu">
                 <li><a href="index.html">INICIO</a></li>
@@ -89,5 +87,7 @@
             <p>&copy; 2024 Asociación Afrocolombiana Benkos Ku Suto - Cartagena, Bolívar</p>
         </div>
     </footer>
+
+    <script src="js/animations.js"></script>
 </body>
 </html>
