--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/Vibras.png" alt="Logo Benkos Ku Suto" class="logo-img">
+                <img src="images/Vibras.jpg" alt="Logo Benkos Ku Suto" class="logo-img">
             </div>
             
             <!-- Checkbox oculto para controlar el menú en móviles -->
