--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/Vibras.jpg" alt="Logo Benkos Ku Suto" class="logo-img">
+                <img src="images/logo-benkos-ku-suto.png" alt="Logo Benkos Ku Suto" class="logo-img">
             </div>
             
             <!-- Checkbox oculto para controlar el menú en móviles -->
@@ -33,13 +33,13 @@
         <section class="page-hero">
             <div class="page-hero-content">
                 <h1>Novedades</h1>
-                <p>esta página misma es la novedad, no no sabia programar hace tres días </p>
+                <p>esta página misma es la novedad, yo no sabía programar hace tres días </p>
             </div>
         </section>
 
         <section class="page-content">
             <div class="Pinterest">
-                <img src="images/logo-benkos-ku-suto.png" alt="Logo Benkos Ku Suto" class="logo-img">
+                <img src="images/Vibras.jpg" alt="chica negra con compradoras" class="Pinterest-img">
             </div>
                         
             </div>
