--- a/news.html
+++ b/news.html
@@ -38,9 +38,12 @@
         </section>
 
         <section class="page-content">
+            <div class="container">
             <div class="Pinterest">
                 <img src="images/Vibras.jpg" alt="chica negra con compradoras" class="Pinterest-img">
             </div>
+            </div>
+                
                         
             </div>
         </section>
