--- a/programs.html
+++ b/programs.html
@@ -49,8 +49,8 @@
                     
                     <div class="program-card">
                         <h3>Preuniversitario Étnico y Popular</h3>
-                          <img src="images/Vibras.jpg" alt="chica negra con compradoras" class="Pinterest-img">
-            </div>
+                           <p>Visibilizar y erradicar las violencias y discriminaciones que vivimos las mujeres negras diversas, desnaturalizando prácticas violentadas hacia nuestro cuerpo negro.</p>
+                    </div>
             </div>
                         <p>Fortalecimiento de los procesos educativos, identitarios y de liderazgos de nuestras comunidades Negras para contribuir al ejercicio del derecho a la educación superior.</p>
                     </div>
