--- a/programs.html
+++ b/programs.html
@@ -58,8 +58,8 @@
                     </div>
                     
                     <div class="program-card">
-                        <h3>Radio KU SUTO FM</h3>
-                        <p>Radio comunitaria cuyo objetivo es impactar socialmente a las comunidades populares y generar diálogos de ciudad.</p>
+                        <h3>Puerto de Derechos</h3>
+                        <p>Escuela de formación de derechos sexuales y reproductivos e identificación de violencias basadas en género con enfasis a mujeres de comunidades vulnerables del caribe colombiano.</p>
                     </div>
                 </div>
             </div>
