--- a/programs.html
+++ b/programs.html
@@ -59,7 +59,7 @@
                     
                     <div class="program-card">
                         <h3>Puerto de Derechos</h3>
-                        <p>Escuela de formación de derechos sexuales y reproductivos e identificación de violencias basadas en género con enfasis a mujeres de comunidades vulnerables del caribe colombiano.</p>
+                        <p>Escuela de formación sobre derechos sexuales y reproductivos e identificación de violencias basadas en género con enfasis a mujeres de comunidades vulnerables del caribe colombiano.</p>
                     </div>
                 </div>
             </div>
