--- a/gallery.html
+++ b/gallery.html
@@ -42,19 +42,19 @@
                 <div class="gallery-carousel">
                     <div class="carousel-container">
                         <div class="carousel-slide">
-                            <img src="images/gallery/photo1.jpg" alt="Actividad comunitaria 1" class="carousel-img">
+                            <img src="images/photo1.jpg" alt="Actividad comunitaria 1" class="carousel-img">
                         </div>
                         <div class="carousel-slide">
-                            <img src="images/gallery/photo2.jpg" alt="Actividad comunitaria 2" class="carousel-img">
+                            <img src="images/photo2.jpg" alt="Actividad comunitaria 2" class="carousel-img">
                         </div>
                         <div class="carousel-slide">
-                            <img src="images/gallery/photo3.jpg" alt="Actividad comunitaria 3" class="carousel-img">
+                            <img src="images/photo3.jpg" alt="Actividad comunitaria 3" class="carousel-img">
                         </div>
                         <div class="carousel-slide">
-                            <img src="images/gallery/photo4.jpg" alt="Actividad comunitaria 4" class="carousel-img">
+                            <img src="images/photo4.jpg" alt="Actividad comunitaria 4" class="carousel-img">
                         </div>
                         <div class="carousel-slide">
-                            <img src="images/gallery/photo5.jpg" alt="Actividad comunitaria 5" class="carousel-img">
+                            <img src="images/photo5.jpg" alt="Actividad comunitaria 5" class="carousel-img">
                         </div>
                     </div>
                     
@@ -75,19 +75,19 @@
                 <!-- Grid de miniaturas -->
                 <div class="gallery-grid">
                     <div class="gallery-item" onclick="currentSlide(1)">
-                        <img src="images/gallery/photo1.jpg" alt="Miniatura 1">
+                        <img src="images/photo1.jpg" alt="Miniatura 1">
                     </div>
                     <div class="gallery-item" onclick="currentSlide(2)">
-                        <img src="images/gallery/photo2.jpg" alt="Miniatura 2">
+                        <img src="images/photo2.jpg" alt="Miniatura 2">
                     </div>
                     <div class="gallery-item" onclick="currentSlide(3)">
-                        <img src="images/gallery/photo3.jpg" alt="Miniatura 3">
+                        <img src="images/photo3.jpg" alt="Miniatura 3">
                     </div>
                     <div class="gallery-item" onclick="currentSlide(4)">
-                        <img src="images/gallery/photo4.jpg" alt="Miniatura 4">
+                        <img src="images/photo4.jpg" alt="Miniatura 4">
                     </div>
                     <div class="gallery-item" onclick="currentSlide(5)">
-                        <img src="images/gallery/photo5.jpg" alt="Miniatura 5">
+                        <img src="images/photo5.jpg" alt="Miniatura 5">
                     </div>
                 </div>
             </div>
